<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sendAlert"
        android:icon="@android:drawable/ic_dialog_alert"
        android:orderInCategory="1"
        android:title="@string/send_alert_msg"/>
    <group android:menuCategory="secondary">
        <item
            android:id="@+id/anularForm"
            android:icon="@drawable/ic_lock_lock"
             android:orderInCategory="1"
            android:title="@string/anular"/>
        <item
            android:id="@+id/closeForm"
            android:icon="@drawable/ic_menu_save"
            android:orderInCategory="2"
            android:title="@string/save"/>
        <item
            android:id="@+id/printForm"
            android:icon="@drawable/ic_menu_print"
            android:orderInCategory="3"
            android:title="@string/print"/>
         <item
            android:id="@+id/minimizeAllForm"
            android:icon="@drawable/btn_minus_disable"  
            android:orderInCategory="3"
            android:title="@string/minimizar"/>
    </group>

</menu>