<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left" >

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_login_mode"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/verify_pin_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/username_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_pin_id_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" /> 

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/set_pin_id_hint"
                android:maxLength="12"
                android:textColor="@color/negro"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/pin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_pin_pin_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/pin_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/set_pin_id_hint"
                android:inputType="text|number|textPassword"
                android:maxLength="4"
                android:password="true"
                android:textColor="@color/negro"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:weightSum="10"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/create_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/change_pin_msg" />

            <Button
                android:id="@+id/verify_pin_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="5"
                android:text="@string/accept" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>