<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:id="@+id/tableLayoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:orientation="vertical" >

        <TableRow>

            <TextView
                android:id="@+id/tipo_documento_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/documento_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinner_tipo_documento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:prompt="@string/save_form_result_select_prompt" />

            <EditText
                android:id="@+id/numero_documento_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:inputType="number"
                android:maxLength="12"
                android:textColor="@color/negro"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sexo_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/sexo_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinner_sexo"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:entries="@array/sexo_array"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:prompt="@string/save_form_result_select_prompt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/clase_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinner_clase"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:prompt="@string/save_form_result_select_prompt" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayoutForm"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/licencia_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/licencia_button_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/accept" />
    </LinearLayout>

</RelativeLayout>