<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/layoutSaveForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonPrint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="DoPrint"
            android:text="@string/print" />

        <TextView
            android:id="@+id/textViewFormTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_form_result" />

        <Spinner
            android:id="@+id/spinnerMotivoCierreTipoFormulario"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawSelectorOnTop="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:prompt="@string/save_form_result_select_prompt" />

        <LinearLayout
            android:id="@+id/linearLayoutObservaciones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <EditText
                android:id="@+id/editTextObservaciones"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="3" />
        </LinearLayout>

        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:onClick="DoSave"
                android:text="@string/accept" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>